--- a/resourcePage.html
+++ b/resourcePage.html
@@ -1,45 +1,52 @@
 <html>
-  <head>
-    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <!--My icon-->
-    <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
-    <title>Resources</title>
-  </head>
-  <body class="content">
-    <!--My fadeIn code-->
-    <script>
-      $(document).ready(function(){
-      $("span").hide();
-      $("h1").hide();
-      $("h3").hide()
-      $("li").hide();
-      $("ul").hide();
-      $("img").hide();
-      $("a").hide();
+    <head>
+        <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!--My icon
+============================-->
+        <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
+        <title>Resources</title>
+   </head>
+   <body class="content">
+    <!--My fadeIn code
+============================-->
+       <script>
+            $(document).ready(function(){
+            $("span").hide();
+            $("h1").hide();
+            $("h3").hide()
+            $("li").hide();
+            $("ul").hide();
+            $("img").hide();
+            $("a").hide();
       
-      $("span").fadeIn(3000);
-      $("h1").fadeIn(3000);
-      $("h3").fadeIn(3000)
-      $("li").fadeIn(3000);
-      $("ul").fadeIn(3000);
-      $("img").fadeIn(3000);
-      $("a").fadeIn(3000);
-      });
+            $("span").fadeIn(3000);
+            $("h1").fadeIn(3000);
+            $("h3").fadeIn(3000)
+            $("li").fadeIn(3000);
+            $("ul").fadeIn(3000);
+            $("img").fadeIn(3000);
+            $("a").fadeIn(3000);
+        });
     </script>
-    <!--My menu bar-->
-  <div>
-  <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50">
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-    <li><a class="active" href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
-  </ul>
-  </div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-    <h1 style="font-family: Comic Sans MS">Resources</h1>
-    <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/"><span>Codepen</span></a> I also use <a href="http://stackoverflow.com/"><span>StackOverFlow</span></a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/"><span>github.</span></a> You can check out my latest creations on Codepen by following me using my username,  <strong><font>Ak-basketball.</font></strong></h3></center>
-  </body>
+    <!--My menu bar
+============================-->
+    <div>
+        <ul>
+            <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50">
+            <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+            <li><a class="active" href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+            <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+            <li><a href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
+        </ul>
+    </div>
+  <!--My spaces
+============================-->
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+<!--My h3/h1 code
+============================-->
+        <h1 style="font-family: Comic Sans MS">Resources</h1>
+        <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/"><span>Codepen</span></a> I also use <a href="http://stackoverflow.com/"><span>StackOverFlow</span></a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/"><span>github.</span></a> You can check out my latest creations on Codepen by following me using my username,  <strong><font>Ak-basketball.</font></strong></h3></center>
+    </body>
 </html>
