--- a/mainPage.html
+++ b/mainPage.html
@@ -18,7 +18,7 @@
                 <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
       </head>
   </div>
-  <div class="body">
+  <div class="scroll">
       <body class="content">
                     <!--My jQuery code
 ======================================-->
