--- a/mainPage.html
+++ b/mainPage.html
@@ -81,7 +81,7 @@
           </div>
                  <!--The code to my table
 =========================================-->
-          <div class="table">
+          <!--<div class="table">
               <center><table>
                   
                   <tr>
@@ -98,7 +98,7 @@
                   </tr>
               
               </table></center>
-          </div>
+          </div>-->
                           <!--My projects
 =========================================-->
           <div class="section">
