--- a/mainPage.html
+++ b/mainPage.html
@@ -68,6 +68,7 @@
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
+                  <p>&nbsp;</p>
                   
                             <!--My title
 ========================================-->
