--- a/blogPage.html
+++ b/blogPage.html
@@ -1,47 +1,63 @@
 <html>
-  <head>
-    <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <!--My icon-->
-    <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
-    <!--title-->
-    <title>Blog</title>
-  </head>
-  <body class="content">
-  <script>
-    $(document).ready(function(){
-      $("p").hide();
-      $("h1").hide();
-      $("ul").hide();
-      $("a").hide();
+    <head>
+        <!--My css and jQuery links
+=================================-->
+        <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <!--My icon
+=================================-->
+        <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
+        <!--title
+=================================-->
+        <title>Blog</title>
+    </head>
+    <body class="content">
+        <!--My jQuery code
+=================================-->
+        <script>
+           $(document).ready(function(){
+              $("p").hide();
+              $("h1").hide();
+              $("ul").hide();
+              $("a").hide();
       
-      $("p").fadeIn(3000);
-      $("h1").fadeIn(3000);
-      $("ul").fadeIn(3000);
-      $("a").fadeIn(3000);
-    });
-  </script>
- <div>
-  <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-    <li><a class="active" href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
-  </ul>
- </div>
- <p>&nbsp;</p>
- <p>&nbsp;</p>
- <div>
-    <em><h1 style="font-family: Comic Sans MS">Blog</h1></em>
-    <em><p style="font-family: Comic Sans MS; font-size: 20px">where I'll tell you about my websites and projects</p></em>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <div class="sect1">
-      <ul class="blogli">
-        <li><a href="">Day 1:</a></li>
-      </ul>
-    </div>
-   </div>
-  </body>
+              $("p").fadeIn(1000);
+              $("h1").fadeIn(1000);
+              $("ul").fadeIn(1000);
+              $("a").fadeIn(1000);
+           });
+        </script>
+        <!--My menu bar
+=================================-->
+        <div>
+            <ul>
+                <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+                <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+                <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+                <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+                <li><a class="active" href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
+            </ul>
+        </div>
+        <!--Spacers
+==================================-->
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+     <!--Title and description
+==================================-->
+        <div>
+            <em><h1 style="font-family: Comic Sans MS">Blog</h1></em>
+            <em><p style="font-family: Comic Sans MS; font-size: 20px">where I'll tell you about my websites and projects</p></em>
+        <!--Spacers
+==================================-->
+     <p>&nbsp;</p>
+     <p>&nbsp;</p>
+         <!--My projects
+==================================-->
+        <div class="sect1">
+            <ul class="blogli">
+                <li><a href="">Day 1:</a></li>
+            </ul>
+        </div>
+<!--==============================--> 
+   </body>
 </html>
