--- a/mainPage.html
+++ b/mainPage.html
@@ -7,7 +7,7 @@
 ======================================-->
                 
                 <title>200 days project</title>
-<!--The links connecting to my css and javascript/jQuery code
+<!--My css and JQuery links
 ======================================-->
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
                 
