--- a/mainPage.html
+++ b/mainPage.html
@@ -83,6 +83,7 @@
               
               <ul>
                   <li><a href="http://ak-basketball.github.io/projects/day1.html">Day 1: Control</a></li>
+                  <li><a href="">Day 2: Animation</a></li>
               </ul>
           </div>
       
