--- a/mainPage.html
+++ b/mainPage.html
@@ -56,11 +56,11 @@
         </nav>
         <!--Apaces
 ========================================-->    
+                 <!-- <p>&nbsp;</p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>-->
                   
                             <!--My title
 ========================================-->
